<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="my.salonapp.salonbookingclientapp.MainActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/changePasswordBtn"
        style="@style/btnServiceTheme"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/changePassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/changeWorkingHourBtn"
        style="@style/btnServiceTheme"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/manageOwnInfo"
        android:textAlignment="center" />

</LinearLayout>
