<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/service_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serviceTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/addNewService"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/service_linear_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_input_layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/category_name"
                    android:textSize="12sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/drawable_spinner_border">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/serviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/service" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_input_layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/servicePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/service_price"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_input_layout_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/serviceDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/service_duration"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/service_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            fab:fab_addButtonColorNormal="@color/violet"
            fab:fab_addButtonColorPressed="@color/violet"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_addButtonSize="normal"
            fab:fab_addButtonStrokeVisible="false"
            fab:fab_expandDirection="up"
            fab:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/addServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/action_submit_green"
                fab:fab_colorPressed="@color/action_submit_green_pressed"
                fab:fab_icon="@drawable/icon_add_white_48dp"
                fab:fab_size="normal"
                fab:fab_title="@string/tooltip_service_add" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/updateServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/action_update_yellow"
                fab:fab_colorPressed="@color/action_update_yellow_pressed"
                fab:fab_icon="@drawable/icon_create_white_48dp"
                fab:fab_size="normal"
                fab:fab_title="@string/tooltip_service_update" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/deleteServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/action_delete_red"
                fab:fab_colorPressed="@color/action_delete_red_pressed"
                fab:fab_icon="@drawable/icon_delete_forever_white_48dp"
                fab:fab_size="normal"
                fab:fab_title="@string/tooltip_service_delete" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/backServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/action_back_blue"
                fab:fab_colorPressed="@color/action_back_blue_pressed"
                fab:fab_icon="@drawable/icon_undo_white_48dp"
                fab:fab_size="normal"
                fab:fab_title="@string/tooltip_service_back" />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </FrameLayout>

</RelativeLayout>