<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="my.salonapp.salonbookingclientapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/welcomeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/logout"
                android:textColor="@color/peach"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/upcoming_booking"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="12dp"
            android:background="@color/white_greyish" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <ListView
                    android:id="@+id/card_listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@null"
                    android:dividerHeight="10dp"
                    android:gravity="center"
                    android:listSelector="@android:color/transparent" />

            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/newBookingBtn"
                android:layout_width="156dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle"
                android:drawableTop="@drawable/icon_event_note_white_18dp"
                android:elevation="10dp"
                android:padding="10dp"
                android:stateListAnimator="@null"
                android:text="@string/newBooking"
                android:textColor="#fff"
                android:translationZ="10dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
